--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
-            background-color: #f4f4f4;
+            background-color:antiquewhite;
             color: #333;
         }
 
@@ -51,7 +51,7 @@
             <ul>
                 <li>Travelling</li>
                 <li>Cooking</li>
-                <li>Mobile Games</li>
+                <li>Mobile Games</l
             </ul>
         </section>
         <section>
